--- a/configcustomer.properties
+++ b/configcustomer.properties
@@ -7,13 +7,13 @@ followup=select ppl.id,todo_date as callback_todo_date, followup_type, purpose a
 
 [db-config]
 
-HOST=52.221.34.185
-USERNAME=mohanraj
-PASSWD=Mohan123
+HOST=
+USERNAME=
+PASSWD=
 PORT=3306
-DB_NAME=lagc
+DB_NAME=
 
 [customerio-config]
 
-site_id=0e8a7af2de74ca18beb0
-api_key=5875274d07f5710860a8
+site_id=
+api_key=
